// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Amount /> should render Amount with default props 1`] = `
<div>
  <div
    class="BaseBox-bmPWx bcSLaJ"
    data-blade-component="amount"
  >
    <div
      class="BaseBox-bmPWx iaZUuq"
      data-blade-component="base-box"
    >
      <span
        class="StyledBaseText-dVBfTO cQGNSm"
        data-blade-component="base-text"
      >
        ₹
      </span>
      <span
        class="StyledBaseText-dVBfTO eIdQFo"
        data-blade-component="base-text"
      >
        1,000
        .
      </span>
      <span
        class="StyledBaseText-dVBfTO ghBMue"
        data-blade-component="base-text"
      >
        00
      </span>
    </div>
  </div>
</div>
`;

exports[`<Amount /> should render MYR currency Amount  1`] = `
<div>
  <div
    class="BaseBox-bmPWx bcSLaJ"
    data-blade-component="amount"
  >
    <div
      class="BaseBox-bmPWx iaZUuq"
      data-blade-component="base-box"
    >
      <span
        class="StyledBaseText-dVBfTO cQGNSm"
        data-blade-component="base-text"
      >
        RM
      </span>
      <span
        class="StyledBaseText-dVBfTO eIdQFo"
        data-blade-component="base-text"
      >
        1,000
        .
      </span>
      <span
        class="StyledBaseText-dVBfTO ghBMue"
        data-blade-component="base-text"
      >
        00
      </span>
    </div>
  </div>
</div>
`;

exports[`<Amount /> should render amount with Humanize value 1`] = `
<div>
  <div
    class="BaseBox-bmPWx bcSLaJ"
    data-blade-component="amount"
  >
    <div
      class="BaseBox-bmPWx iaZUuq"
      data-blade-component="base-box"
    >
      <span
        class="StyledBaseText-dVBfTO bFvkSy"
        data-blade-component="base-text"
      >
        ₹
      </span>
      <div
        class="StyledBaseText-dVBfTO ggtlBf"
        data-blade-component="base-text"
      >
        1k
      </div>
    </div>
  </div>
</div>
`;

exports[`<Amount /> should render body-medium size Amount 1`] = `
<div>
  <div
    class="BaseBox-bmPWx bcSLaJ"
    data-blade-component="amount"
  >
    <div
      class="BaseBox-bmPWx iaZUuq"
      data-blade-component="base-box"
    >
      <span
        class="StyledBaseText-dVBfTO cQGNSm"
        data-blade-component="base-text"
      >
        ₹
      </span>
      <span
        class="StyledBaseText-dVBfTO eIdQFo"
        data-blade-component="base-text"
      >
        1,000
        .
      </span>
      <span
        class="StyledBaseText-dVBfTO ghBMue"
        data-blade-component="base-text"
      >
        00
      </span>
    </div>
  </div>
</div>
`;

exports[`<Amount /> should render body-medium-bold size Amount 1`] = `
<div>
  <div
    class="BaseBox-bmPWx bcSLaJ"
    data-blade-component="amount"
  >
    <div
      class="BaseBox-bmPWx iaZUuq"
      data-blade-component="base-box"
    >
      <span
        class="StyledBaseText-dVBfTO cQGNSm"
        data-blade-component="base-text"
      >
        ₹
      </span>
      <span
        class="StyledBaseText-dVBfTO eIdQFo"
        data-blade-component="base-text"
      >
        1,000
        .
      </span>
      <span
        class="StyledBaseText-dVBfTO ghBMue"
        data-blade-component="base-text"
      >
        00
      </span>
    </div>
  </div>
  <div
    class="BaseBox-bmPWx bcSLaJ"
    data-blade-component="amount"
  >
    <div
      class="BaseBox-bmPWx iaZUuq"
      data-blade-component="base-box"
    >
      <span
        class="StyledBaseText-dVBfTO cQGNSm"
        data-blade-component="base-text"
      >
        ₹
      </span>
      <span
        class="StyledBaseText-dVBfTO ldPEnv"
        data-blade-component="base-text"
      >
        1,000
        .
      </span>
      <span
        class="StyledBaseText-dVBfTO ghBMue"
        data-blade-component="base-text"
      >
        00
      </span>
    </div>
  </div>
  <div
    class="BaseBox-bmPWx bcSLaJ"
    data-blade-component="amount"
  >
    <div
      class="BaseBox-bmPWx iaZUuq"
      data-blade-component="base-box"
    >
      <span
        class="StyledBaseText-dVBfTO cQGNSm"
        data-blade-component="base-text"
      >
        ₹
      </span>
      <span
        class="StyledBaseText-dVBfTO fedBF"
        data-blade-component="base-text"
      >
        1,000
        .
      </span>
      <span
        class="StyledBaseText-dVBfTO ghBMue"
        data-blade-component="base-text"
      >
        00
      </span>
    </div>
  </div>
  <div
    class="BaseBox-bmPWx bcSLaJ"
    data-blade-component="amount"
  >
    <div
      class="BaseBox-bmPWx iaZUuq"
      data-blade-component="base-box"
    >
      <span
        class="StyledBaseText-dVBfTO cQGNSm"
        data-blade-component="base-text"
      >
        ₹
      </span>
      <span
        class="StyledBaseText-dVBfTO cxYahC"
        data-blade-component="base-text"
      >
        1,000
        .
      </span>
      <span
        class="StyledBaseText-dVBfTO ghBMue"
        data-blade-component="base-text"
      >
        00
      </span>
    </div>
  </div>
  <div
    class="BaseBox-bmPWx bcSLaJ"
    data-blade-component="amount"
  >
    <div
      class="BaseBox-bmPWx iaZUuq"
      data-blade-component="base-box"
    >
      <span
        class="StyledBaseText-dVBfTO lgcqZy"
        data-blade-component="base-text"
      >
        ₹
      </span>
      <span
        class="StyledBaseText-dVBfTO iyLsJN"
        data-blade-component="base-text"
      >
        1,000
        .
      </span>
      <span
        class="StyledBaseText-dVBfTO qInZa"
        data-blade-component="base-text"
      >
        00
      </span>
    </div>
  </div>
  <div
    class="BaseBox-bmPWx bcSLaJ"
    data-blade-component="amount"
  >
    <div
      class="BaseBox-bmPWx iaZUuq"
      data-blade-component="base-box"
    >
      <span
        class="StyledBaseText-dVBfTO lgcqZy"
        data-blade-component="base-text"
      >
        ₹
      </span>
      <span
        class="StyledBaseText-dVBfTO jKEFeG"
        data-blade-component="base-text"
      >
        1,000
        .
      </span>
      <span
        class="StyledBaseText-dVBfTO qInZa"
        data-blade-component="base-text"
      >
        00
      </span>
    </div>
  </div>
  <div
    class="BaseBox-bmPWx bcSLaJ"
    data-blade-component="amount"
  >
    <div
      class="BaseBox-bmPWx iaZUuq"
      data-blade-component="base-box"
    >
      <span
        class="StyledBaseText-dVBfTO cQGNSm"
        data-blade-component="base-text"
      >
        ₹
      </span>
      <span
        class="StyledBaseText-dVBfTO bsgrdX"
        data-blade-component="base-text"
      >
        1,000
        .
      </span>
      <span
        class="StyledBaseText-dVBfTO ghBMue"
        data-blade-component="base-text"
      >
        00
      </span>
    </div>
  </div>
  <div
    class="BaseBox-bmPWx bcSLaJ"
    data-blade-component="amount"
  >
    <div
      class="BaseBox-bmPWx iaZUuq"
      data-blade-component="base-box"
    >
      <span
        class="StyledBaseText-dVBfTO cQGNSm"
        data-blade-component="base-text"
      >
        ₹
      </span>
      <span
        class="StyledBaseText-dVBfTO dFejDk"
        data-blade-component="base-text"
      >
        1,000
        .
      </span>
      <span
        class="StyledBaseText-dVBfTO ghBMue"
        data-blade-component="base-text"
      >
        00
      </span>
    </div>
  </div>
  <div
    class="BaseBox-bmPWx bcSLaJ"
    data-blade-component="amount"
  >
    <div
      class="BaseBox-bmPWx iaZUuq"
      data-blade-component="base-box"
    >
      <span
        class="StyledBaseText-dVBfTO bFvkSy"
        data-blade-component="base-text"
      >
        ₹
      </span>
      <span
        class="StyledBaseText-dVBfTO ggtlBf"
        data-blade-component="base-text"
      >
        1,000
        .
      </span>
      <span
        class="StyledBaseText-dVBfTO eWqjuq"
        data-blade-component="base-text"
      >
        00
      </span>
    </div>
  </div>
</div>
`;

exports[`<Amount /> should render body-small size Amount 1`] = `
<div>
  <div
    class="BaseBox-bmPWx bcSLaJ"
    data-blade-component="amount"
  >
    <div
      class="BaseBox-bmPWx iaZUuq"
      data-blade-component="base-box"
    >
      <span
        class="StyledBaseText-dVBfTO cQGNSm"
        data-blade-component="base-text"
      >
        ₹
      </span>
      <span
        class="StyledBaseText-dVBfTO fedBF"
        data-blade-component="base-text"
      >
        1,000
        .
      </span>
      <span
        class="StyledBaseText-dVBfTO ghBMue"
        data-blade-component="base-text"
      >
        00
      </span>
    </div>
  </div>
</div>
`;

exports[`<Amount /> should render body-small-bold size Amount 1`] = `
<div>
  <div
    class="BaseBox-bmPWx bcSLaJ"
    data-blade-component="amount"
  >
    <div
      class="BaseBox-bmPWx iaZUuq"
      data-blade-component="base-box"
    >
      <span
        class="StyledBaseText-dVBfTO cQGNSm"
        data-blade-component="base-text"
      >
        ₹
      </span>
      <span
        class="StyledBaseText-dVBfTO cxYahC"
        data-blade-component="base-text"
      >
        1,000
        .
      </span>
      <span
        class="StyledBaseText-dVBfTO ghBMue"
        data-blade-component="base-text"
      >
        00
      </span>
    </div>
  </div>
</div>
`;

exports[`<Amount /> should render negative intent Amount  1`] = `
<div>
  <div
    class="BaseBox-bmPWx bcSLaJ"
    data-blade-component="amount"
  >
    <div
      class="BaseBox-bmPWx iaZUuq"
      data-blade-component="base-box"
    >
      <span
        class="StyledBaseText-dVBfTO cRaWHO"
        data-blade-component="base-text"
      >
        ₹
      </span>
      <div
        class="StyledBaseText-dVBfTO jOUCBy"
        data-blade-component="base-text"
      >
        1,000.00
      </div>
    </div>
  </div>
</div>
`;

exports[`<Amount /> should render positive intent Amount  1`] = `
<div>
  <div
    class="BaseBox-bmPWx bcSLaJ"
    data-blade-component="amount"
  >
    <div
      class="BaseBox-bmPWx iaZUuq"
      data-blade-component="base-box"
    >
      <span
        class="StyledBaseText-dVBfTO jKuOWA"
        data-blade-component="base-text"
      >
        ₹
      </span>
      <span
        class="StyledBaseText-dVBfTO chIjgb"
        data-blade-component="base-text"
      >
        1,000
        .
      </span>
      <span
        class="StyledBaseText-dVBfTO eDQkPo"
        data-blade-component="base-text"
      >
        00
      </span>
    </div>
  </div>
</div>
`;
